[gd_scene load_steps=32 format=2]

[ext_resource path="res://level select.gd" type="Script" id=1]
[ext_resource path="res://level select/level4press.png" type="Texture2D" id=2]
[ext_resource path="res://level select/level1hover.png" type="Texture2D" id=3]
[ext_resource path="res://level select/level3hover.png" type="Texture2D" id=4]
[ext_resource path="res://level select/level5hover.png" type="Texture2D" id=5]
[ext_resource path="res://level select/level4base.png" type="Texture2D" id=6]
[ext_resource path="res://level select/level3base.png" type="Texture2D" id=7]
[ext_resource path="res://level select/level6hover.png" type="Texture2D" id=8]
[ext_resource path="res://level select/level2press.png" type="Texture2D" id=9]
[ext_resource path="res://level select/chooselevel.png" type="Texture2D" id=10]
[ext_resource path="res://level select/level5base.png" type="Texture2D" id=11]
[ext_resource path="res://level select/level6base.png" type="Texture2D" id=12]
[ext_resource path="res://level select/level6pressed.png" type="Texture2D" id=13]
[ext_resource path="res://level select/level2base.png" type="Texture2D" id=14]
[ext_resource path="res://level select/level2hover.png" type="Texture2D" id=15]
[ext_resource path="res://level select/level3press.png" type="Texture2D" id=16]
[ext_resource path="res://level select/level4hover.png" type="Texture2D" id=17]
[ext_resource path="res://level select/level1base.png" type="Texture2D" id=18]
[ext_resource path="res://level select/level5press.png" type="Texture2D" id=19]
[ext_resource path="res://level select/level1press.png" type="Texture2D" id=20]
[ext_resource path="res://level select/additionalgaymodes.png" type="Texture2D" id=21]
[ext_resource path="res://level select/LevelQuitBASE.png" type="Texture2D" id=22]
[ext_resource path="res://level select/LevelQuitHOVER.png" type="Texture2D" id=23]
[ext_resource path="res://level select/LevelSettingsBASE.png" type="Texture2D" id=24]
[ext_resource path="res://level select/LevelSettingsHOVER.png" type="Texture2D" id=25]
[ext_resource path="res://level select/LevelSettingsPRESS.png" type="Texture2D" id=26]
[ext_resource path="res://level select/LevelQuitPRESS.png" type="Texture2D" id=27]
[ext_resource path="res://level select/tagBASE.png" type="Texture2D" id=28]
[ext_resource path="res://level select/tagHOVER.png" type="Texture2D" id=29]
[ext_resource path="res://level select/tagPRESS.png" type="Texture2D" id=30]
[ext_resource path="res://level select/lock.png" type="Texture2D" id=31]

[node name="Node2D" type="Node2D"]
process_mode = 2
script = ExtResource( 1 )

[node name="Chooselevel2" type="Sprite2D" parent="."]
position = Vector2( 1149, 323 )
scale = Vector2( 6, 6 )
texture = ExtResource( 10 )

[node name="L1" type="TextureButton" parent="."]
offset_left = 300.0
offset_top = 500.0
offset_right = 450.0
offset_bottom = 575.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 18 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 3 )

[node name="L2" type="TextureButton" parent="."]
offset_left = 1000.0
offset_top = 500.0
offset_right = 1150.0
offset_bottom = 575.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 15 )

[node name="Lock" type="Sprite2D" parent="L2"]
position = Vector2( 75, 37.5 )
texture = ExtResource( 31 )

[node name="L3" type="TextureButton" parent="."]
offset_left = 1700.0
offset_top = 500.0
offset_right = 1850.0
offset_bottom = 575.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 16 )
texture_hover = ExtResource( 4 )

[node name="Lock2" type="Sprite2D" parent="L3"]
position = Vector2( 75, 37.5 )
texture = ExtResource( 31 )

[node name="L4" type="TextureButton" parent="."]
offset_left = 300.0
offset_top = 800.0
offset_right = 450.0
offset_bottom = 875.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 2 )
texture_hover = ExtResource( 17 )

[node name="Lock3" type="Sprite2D" parent="L4"]
position = Vector2( 75, 37.5 )
texture = ExtResource( 31 )

[node name="L5" type="TextureButton" parent="."]
offset_left = 1000.0
offset_top = 800.0
offset_right = 1150.0
offset_bottom = 875.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 19 )
texture_hover = ExtResource( 5 )

[node name="Lock4" type="Sprite2D" parent="L5"]
position = Vector2( 75, 37.5 )
texture = ExtResource( 31 )

[node name="L6" type="TextureButton" parent="."]
offset_left = 1700.0
offset_top = 800.0
offset_right = 1850.0
offset_bottom = 875.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 12 )
texture_pressed = ExtResource( 13 )
texture_hover = ExtResource( 8 )

[node name="Lock5" type="Sprite2D" parent="L6"]
position = Vector2( 75, 37.5 )
texture = ExtResource( 31 )

[node name="L7" type="TextureButton" parent="."]
offset_left = 959.0
offset_top = 1092.0
offset_right = 1109.0
offset_bottom = 1167.0
scale = Vector2( 2.5, 2.5 )
texture_normal = ExtResource( 28 )
texture_pressed = ExtResource( 30 )
texture_hover = ExtResource( 29 )

[node name="Lock6" type="Sprite2D" parent="L7"]
position = Vector2( 75, 37.5 )
texture = ExtResource( 31 )

[node name="settings" type="TextureButton" parent="."]
offset_left = 1821.0
offset_top = 1163.0
offset_right = 2021.0
offset_bottom = 1238.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 24 )
texture_pressed = ExtResource( 26 )
texture_hover = ExtResource( 25 )

[node name="quit" type="TextureButton" parent="."]
offset_left = 10.0
offset_top = 1172.0
offset_right = 210.0
offset_bottom = 1247.0
scale = Vector2( 2, 2 )
texture_normal = ExtResource( 22 )
texture_pressed = ExtResource( 27 )
texture_hover = ExtResource( 23 )

[node name="Additionalgaymodes" type="Sprite2D" parent="."]
position = Vector2( 1149, 1036 )
scale = Vector2( 3, 3 )
texture = ExtResource( 21 )

[connection signal="pressed" from="L1" to="." method="_on_L1_pressed"]
[connection signal="pressed" from="L2" to="." method="_on_L2_pressed"]
[connection signal="pressed" from="L3" to="." method="_on_L3_pressed"]
[connection signal="pressed" from="L5" to="." method="_on_L5_pressed"]
[connection signal="pressed" from="L6" to="." method="_on_L6_pressed"]
[connection signal="pressed" from="L7" to="." method="_on_L7_pressed"]
[connection signal="pressed" from="settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="quit" to="." method="_on_quit_pressed"]
